# epub-metadata

./: .gitignore  LICENSE  README  README.md  Setup.hs  TODO  TODO.md  changelog.md  epub-metadata.cabal  package.yaml  stack.yaml
app/: epub-metadata-example.hs
doc/dev/: notes
doc/examples/: README  epub-metadata-example.cabal  epub-metadata-example.hs
doc/hcar/: epub-metadata.tex  epubmetadata-De.tex
src/Codec/: Epub.hs
src/Codec/Epub/: Archive.hs  Format.hs  IO.hs  Parse.hs  Util.hs
src/Codec/Epub/Data/: Common.hs  Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Spine.hs
src/Codec/Epub/Format/: Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Spine.hs  Util.hs
src/Codec/Epub/Opf/: Common.hs  Metadata.hs  Package.hs  Parse.hs  epub-meta.hs
src/Codec/Epub/Opf/Cli/: Opts.hs  epub-meta.hs  epubmeta.hs
src/Codec/Epub/Opf/Format/: Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Spine.hs  Util.hs
src/Codec/Epub/Opf/Metadata/: Format.hs  Parse.hs
src/Codec/Epub/Opf/Package/: Guide.hs  Manifest.hs  Metadata.hs  Spine.hs
src/Codec/Epub/Parse/: Common.hs  Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Refinements.hs  Spine.hs  Util.hs
src/Codec/Epub2/: Archive.hs  IO.hs
src/Codec/Epub2/Opf/: Common.hs  Package.hs  Parse.hs
src/Codec/Epub2/Opf/Format/: Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Spine.hs  Util.hs
src/Codec/Epub2/Opf/Package/: Guide.hs  Manifest.hs  Metadata.hs  Spine.hs
src/app/: epub-metadata-example.hs
src/lib/Codec/: Epub.hs
src/lib/Codec/Epub/: Format.hs  IO.hs  Parse.hs  Util.hs
src/lib/Codec/Epub/Data/: Common.hs  Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Spine.hs
src/lib/Codec/Epub/Format/: Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Spine.hs  Util.hs
src/lib/Codec/Epub/Parse/: Guide.hs  Manifest.hs  Metadata.hs  Package.hs  Refinements.hs  Spine.hs  Util.hs
src/tests/: Archive.hs  ParseManifest.hs  ParsePackage.hs  ParseSpine.hs  test-main.hs
src/tests/Epub2/: ParseGuide.hs  ParseMetadata.hs
src/tests/Epub3/: ParseMetadata.hs
testsuite/: Archive.hs  OpfParse.hs  ParseGuide.hs  ParseManifest.hs  ParseMetadata.hs  ParsePackage.hs  ParseSpine.hs  epub2-full.opf  opf-parse.hs  runtests.hs  test-main.hs  testFull.opf  testMinimal.opf  testMissingAll.opf
testsuite/Epub2/: ParseGuide.hs  ParseMetadata.hs
testsuite/Epub3/: ParseMetadata.hs
util/: gentags.sh  show-opf.hs
util/prefs/: boring
util/resources/: damagedZipCentralDir.epub  epub2-full.opf  epub2-minimal.opf  epub2-missingAll.opf  epub3-full.opf  testIllegalCharsBeforeDecl.opf
