name:                epub-metadata
version:             4.0
cabal-version:       >= 1.8
build-type:          Simple
license:             BSD3
license-file:        LICENSE
copyright:           2010-2013 Dino Morelli
author:              Dino Morelli
maintainer:          Dino Morelli <dino@ui3.info>
stability:           experimental
homepage:            http://ui3.info/d/proj/epub-metadata.html
synopsis:            Library for parsing EPUB document metdata
description:         Library for parsing and manipulating EPUB document metadata. Supports EPUB versions 2 and 3.
category:            Codec, Text
tested-with:         GHC >= 7.6.2
extra-source-files:  testsuite/*.epub,
                     testsuite/*.hs,
                     testsuite/*.opf,
                     testsuite/bookfiles/mimetype,
                     testsuite/bookfiles/foo,
                     testsuite/bookfiles/content/bar

source-repository    head
   type:             darcs
   location:         http://ui3.info/darcs/epub-metadata/

library
   exposed-modules:  Codec.Epub.Archive
                     Codec.Epub.Data.Common
                     Codec.Epub.Data.Guide
                     Codec.Epub.Data.Manifest
                     Codec.Epub.Data.Metadata
                     Codec.Epub.Data.Package
                     Codec.Epub.Data.Spine
                     Codec.Epub.Format
                     Codec.Epub.Format.Guide
                     Codec.Epub.Format.Manifest
                     Codec.Epub.Format.Metadata
                     Codec.Epub.Format.Package
                     Codec.Epub.Format.Spine
                     Codec.Epub.Format.Util
                     Codec.Epub.IO
                     Codec.Epub.Parse
                     Codec.Epub.Parse.Manifest
                     Codec.Epub.Parse.Metadata
                     Codec.Epub.Parse.Package
                     Codec.Epub.Parse.Util
   build-depends:    base >= 3 && < 5, bytestring, containers,
                     directory, filepath, hxt >= 9, mtl, regex-compat,
                     zip-archive
   hs-source-dirs:   src
   ghc-options:      -Wall

test-suite           test-epub-metadata
   type:             exitcode-stdio-1.0
   main-is:          test-main.hs
   build-depends:    base >= 3 && < 5, bytestring, directory, filepath,
                     HUnit, hxt >= 9, mtl, regex-compat, zip-archive
   hs-source-dirs:   src testsuite
   ghc-options:      -Wall
