name:                epub-metadata-example
version:             1.0
cabal-version:       >= 1.8
build-type:          Simple

executable           epub-metadata-example
   main-is:          epub-metadata-example.hs
   build-depends:    base >= 3 && < 5,
                     epub-metadata,
                     mtl
   ghc-options:      -Wall
